--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,32 @@
 alabaster==0.7.12
 Babel==2.8.0
 beautifulsoup4==4.9.3
+blinker==1.4
 bs4==0.0.1
 certifi==2020.6.20
 chardet==3.0.4
 click==7.1.2
 docutils==0.16
 Flask==1.1.2
+Flask-Ext==0.1
+Flask-Login==0.5.0
+Flask-SQLAlchemy==2.4.4
+Flask-WhooshAlchemy==0.56
+flask-whooshalchemy3==0.2.0
 idna==2.10
 imagesize==1.2.0
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
+numpy==1.19.4
 packaging==20.4
+pandas==1.1.4
+pbr==3.1.1
 pkg-resources==0.0.0
+psycopg2==2.8.6
 Pygments==2.7.1
 pyparsing==2.4.7
+python-dateutil==2.8.1
 python-nmap==0.6.1
 python3-nmap==1.4.8
 pytz==2020.1
@@ -32,5 +43,7 @@ sphinxcontrib-htmlhelp==1.0.3
 sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.4
+SQLAlchemy==1.3.20
 urllib3==1.25.10
 Werkzeug==1.0.1
+Whoosh==2.7.4
